--- a/coffee-cat/src/app/auth/login-user/login-user.component.html
+++ b/coffee-cat/src/app/auth/login-user/login-user.component.html
@@ -1,15 +1,14 @@
 <div class="login__page" [style.background-image]="'url(assets/images/login-bg.jpg)'">
   <div class="login__row min-h-screen">
     <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white">
-      <img src="assets/images/logo-bg-left.png" alt="">
       <h2 class="text-center mt-1">
-        Chào mừng bạn đến với chúng tôi</h2>
+        Người dùng đăng nhập</h2>
     </div>
     <div class="login__content p-4 sm:p-8 flex flex-col justify-center">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
         <form>
           <div class="text-2xl font-bold text-center"><a [routerLink]="['']" class="w-48 inline-block"><img src="assets/images/QTlogo.png" alt="QTlogo" /></a></div>
-          
+          <!-- <div class="flex text-gray-700 text-sm font-semibold mb-2 jusitfy-center align-item-center">Người dùng đăng nhập</div> -->
           <div class="mb-4 mt-4 form-group">
             <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="Tên đăng nhập"> Tên đăng nhập: </label>
             <input
