--- a/coffee-cat/src/app/dashboard/dashboard-product-management/dashboard-product-management.component.html
+++ b/coffee-cat/src/app/dashboard/dashboard-product-management/dashboard-product-management.component.html
@@ -1,1 +1,80 @@
-<p>dashboard-product-management works!</p>
+<div>
+  <div class="filter flex items-center mb-5">
+    <h5>Favorite products</h5>
+    <div class="flex items-center ml-auto">
+      <button [class.text-accent]="view === 'grid'" (click)="view = 'grid'" mat-icon-button class="view__btn"><mat-icon>grid_view</mat-icon></button>
+      <button [class.text-accent]="view === 'list'" (click)="view = 'list'" mat-icon-button class="view__btn"><mat-icon>list_alt</mat-icon></button>
+    </div>
+  </div>
+  <div>
+    <div *ngIf="view === 'list'" class="table-inside">
+      <div class="flex flex-col border ltLg:responsive">
+        <div class="flex items-center p-4 border-b hover:bg-blue-100">
+          <div class="w-6/12 font-medium"><div class="pl-16 ml-3">Tên sản phẩm</div></div>
+          <div class="w-2/12 font-medium">Loại sản phẩm</div>
+          <div class="w-2/12 font-medium text-center">Giá tiền</div>
+          <div class="w-2/12 font-medium">Rating</div>
+          <div class="w-1/12 font-medium">Feedback</div>
+          <div class="w-1/12"></div>
+        </div>
+        <div class="flex items-center p-4 border-b hover:bg-blue-100" *ngFor="let product of products | slice: 0:9">
+          <div class="w-6/12">
+            <a href="" class="flex hover:text-primary">
+              <div class="max-h-16 w-16 flex-none mr-3 border" *ngIf="product?.images">
+                <img [src]="product?.images[0]" alt="img">
+              </div>
+              <h6 class="flex-auto">{{ product?.name }}</h6>
+            </a>
+          </div>
+          <div class="w-2/12">{{product?.category}}</div>
+          <div class="w-2/12 text-center">${{product?.price}}</div>
+          <div class="w-2/12">
+            <div class="flex items-center">
+              <mat-icon class="mr-1 text-lg leading-4 h-4 w-4 text-yellow-500">star_rate</mat-icon>
+              {{product?.rating}}
+            </div>
+          </div>
+          <div class="w-1/12">
+            <div class="flex items-center">
+              <mat-icon class="mr-1 text-lg leading-4 h-4 w-4">feedback</mat-icon>
+              {{product?.feedback}}
+            </div>
+          </div>
+          <div class="w-1/12 text-right">
+            <button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu" xposition="before">
+              <button mat-menu-item>
+								<svg xmlns="http://www.w3.org/2000/svg" style="color: rgb(20, 177, 198);" width="22" height="22" fill="currentColor" class="bi bi-grid-3x2-gap mr-2" viewBox="0 0 16 16">
+									<path d="M4 4v2H2V4zm1 7V9a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m5 5V9a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V4a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1M9 4v2H7V4zm5 0h-2v2h2zM4 9v2H2V9zm5 0v2H7V9zm5 0v2h-2V9zm-3-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1z"/>
+								</svg>
+								<span>Chi tiết</span>
+							</button>
+							<button mat-menu-item>
+								<svg xmlns="http://www.w3.org/2000/svg" style="color: red;" width="18" height="18" fill="currentColor" class="bi bi-trash3-fill mr-2" viewBox="0 0 16 16">
+									<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
+								</svg>
+								<span >Xóa</span>
+							</button>
+            </mat-menu>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="grid grid-cols-12 gap-4" *ngIf="view === 'grid'">
+      <div class="col-span-4" *ngFor="let product of products | slice: 0:9">
+        <mat-card>
+          <img class="m-0 mb-4" mat-card-image [src]="product?.images[0]" alt="Photo of a Shiba Inu" />
+          <mat-card-header class="mx-0">
+            <h3 class="text-[15px] leading-[23px]">{{ product?.name }}</h3>
+          </mat-card-header>
+          <mat-card-actions>
+            <a mat-stroked-button [routerLink]="['/products', product.id]" class="px-5">View</a>
+            <button mat-button>SHARE</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>  
+  </div>
+</div>
