--- a/coffee-cat/src/app/home/home.component.html
+++ b/coffee-cat/src/app/home/home.component.html
@@ -47,9 +47,8 @@
     </div>
   </div>
 </div> -->
-
+<!-- 
 <div class="flex justify-center items-center">
-  <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
   <div class="2xl:mx-auto 2xl:container py-12 px-4 sm:px-6 xl:px-20 2xl:px-0 w-full">
     <div class="flex flex-col jusitfy-center items-center space-y-10">
       <div class="flex flex-col justify-center items-center ">
@@ -95,7 +94,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- <div class="ll-about mt-28 mb-28">
   <div class="container">
     <div class="flex flex-wrap">
