your commit message

--- a/coffee-cat/src/app/home/home.component.html
+++ b/coffee-cat/src/app/home/home.component.html
@@ -6,12 +6,14 @@
         <h1 class="lg:mt-12 text-white font-bold">
           Chào mừng bạn đến với cửa hàng!
         </h1>
-        <div class="flex flex-wrap items-center mt-4">
+        <div class="flex flex-wrap items-center mt-4" tyle="gap: 10px;">
           <!-- <div class="inline-block mr-5">Offer:</div> -->
-          <a routerLink="/auth/login" mat-raised-button color="warn" class="mt-8 px-8 py-3 text-lg font-semibold">Đăng nhập</a>
+          <a routerLink="/auth/login" mat-raised-button color="warn" class="mt-8 px-8 py-3 text-lg font-semibold">Quản trị đăng nhập</a>
+          <a routerLink="/auth/login-user" mat-raised-button color="warn" class="mt-8 px-8 py-3 text-lg ml-2 font-semibold">Người dùng đăng nhập</a>
           <!-- <a href="" class="rounded-full bg-white px-5 py-2 bg-opacity-40 mr-3">Marketing</a>
           <a href="" class="rounded-full bg-white px-5 py-2 bg-opacity-40">Staff</a> -->
         </div>
+
       </div>
       <div class="col-span-12 md:col-span-6 lg:col-span-5 xxl:col-span-6 ll-image mt-10 md:mt-0">
         <img class="ml-auto" src="assets/images/hero.png" alt="Hero" />
